<resources>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="device_info_default">Unknown</string>
    <string name="turn_on_radio">Turn on radio</string>
    <string name="turn_off_radio">Turn off radio</string>
    <string name="radioInfo_menu_viewADN">View SIM address book</string>
    <string name="radioInfo_menu_viewFDN">View Fixed Dialing Numbers</string>
    <string name="radioInfo_menu_viewSDN">View Service Dialing Numbers</string>
    <string name="radioInfo_menu_getPDP">Get PDP list</string>
    <string name="radioInfo_service_in">In service</string>
    <string name="radioInfo_service_out">Out of service</string>
    <string name="radioInfo_service_emergency">Emergency calls only</string>
    <string name="radioInfo_service_off">Radio off</string>
    <string name="radioInfo_roaming_in">Roaming</string>
    <string name="radioInfo_roaming_not">Not roaming</string>
    <string name="radioInfo_phone_idle">Idle</string>
    <string name="radioInfo_phone_ringing">Ringing</string>
    <string name="radioInfo_phone_offhook">Call in progress</string>
    <string name="radioInfo_data_disconnected">Disconnected</string>
    <string name="radioInfo_data_connecting">Connecting</string>
    <string name="radioInfo_data_connected">Connected</string>
    <string name="radioInfo_data_suspended">Suspended</string>
    <string name="radioInfo_unknown">Unknown</string>
    <string name="radioInfo_display_packets">pkts</string>
    <string name="radioInfo_display_bytes">bytes</string>
    <string name="radioInfo_display_dbm">dBm</string>
    <string name="radioInfo_display_asu">asu</string>
    <string name="radioInfo_lac">LAC</string>
    <string name="radioInfo_cid">CID</string>
    <string name="sdcard_unmount">Unmount SD card</string>
    <string name="sdcard_format">Format SD card</string>
    <string name="small_font">Small</string>
    <string name="medium_font">Medium</string>
    <string name="large_font">Large</string>
    <string name="font_size_preview_text">Servez à ce monsieur une bière et des kiwis.</string>
    <string name="font_size_save">OK</string>
    <string name="sdcard_setting">SD card</string>
    <string name="battery_info_status_label">Battery status:</string>
    <string name="battery_info_power_label">Power plug:</string>
    <string name="battery_info_scale_label">Battery scale:</string>
    <string name="battery_info_level_label">Battery level:</string>
    <string name="battery_info_health_label">Battery health:</string>
    <string name="battery_info_technology_label">Battery technology:</string>
    <string name="battery_info_voltage_label">Battery voltage:</string>
    <string name="battery_info_voltage_units">mV</string>
    <string name="battery_info_temperature_label">Battery temperature:</string>
    <string name="battery_info_temperature_units">° C</string>
    <string name="battery_info_uptime">Time since boot:</string>
    <string name="battery_info_awake_battery">Awake time on battery:</string>
    <string name="battery_info_awake_plugged">Awake time when charging:</string>
    <string name="battery_info_screen_on">Screen ON time:</string>
    <string name="battery_info_status_unknown">Unknown</string>
    <string name="battery_info_status_charging">Charging</string>
    <string name="battery_info_status_charging_ac">(AC)</string>
    <string name="battery_info_status_charging_usb">(USB)</string>
    <string name="battery_info_status_discharging">Discharging</string>
    <string name="battery_info_status_not_charging">Not charging</string>
    <string name="battery_info_status_full">Full</string>
    <string name="battery_info_power_unplugged">Unplugged</string>
    <string name="battery_info_power_ac">AC</string>
    <string name="battery_info_power_usb">USB</string>
    <string name="battery_info_power_ac_usb">AC+USB</string>
    <string name="battery_info_power_unknown">Unknown</string>
    <string name="battery_info_health_unknown">Unknown</string>
    <string name="battery_info_health_good">Good</string>
    <string name="battery_info_health_overheat">Overheat</string>
    <string name="battery_info_health_dead">Dead</string>
    <string name="battery_info_health_over_voltage">Over voltage</string>
    <string name="battery_info_health_unspecified_failure">Unknown error</string>
    <string name="date_and_time">Date and time settings</string>
    <string name="date_time_12_hour_sample">1:00 PM</string>
    <string name="date_time_24_hour_sample">13:00</string>
    <string name="date_time_changeTime_text">Set time</string>
    <string name="date_time_changeDate_text">Date</string>
    <string name="choose_timezone">Select time zone</string>
    <string name="default_date_format">MM/dd/yyyy</string>
    <string name="normal_date_format">Normal (%s)</string>
    <string name="display_preview_label">Preview:</string>
    <string name="display_font_size_label">Font size:</string>
    <string name="intent_sender_data_label">Data:</string>
    <string name="intent_sender_sendbroadcast_text">Send broadcast</string>
    <string name="intent_sender_action_label">Action:</string>
    <string name="intent_sender_startactivity_text">Start activity</string>
    <string name="intent_sender_resource_label">Resource:</string>
    <string name="intent_sender_account_label">Account:</string>
    <string name="proxy_clear_text">Clear</string>
    <string name="proxy_port_label">Port</string>
    <string name="proxy_defaultView_text">Restore defaults</string>
    <string name="proxy_action_text">Save</string>
    <string name="proxy_hostname_label">Hostname</string>
    <string name="proxy_error">Attention</string>
    <string name="proxy_error_dismiss">OK</string>
    <string name="proxy_error_invalid_host">The hostname you typed is not valid</string>
    <string name="proxy_error_empty_port">You must complete the port field</string>
    <string name="proxy_error_empty_host_set_port">The port field must be empty if the host field is empty</string>
    <string name="proxy_error_invalid_port">The port you typed is not valid</string>
    <string name="radio_info_signal_location_label">Location:</string>
    <string name="radio_info_neighboring_location_label">Neighboring CID:</string>
    <string name="radio_info_data_attempts_label">Data attempts:</string>
    <string name="radio_info_gprs_service_label">GPRS service:</string>
    <string name="radio_info_roaming_label">Roaming:</string>
    <string name="radio_info_imei_label">IMEI:</string>
    <string name="radio_info_call_redirect_label">Call redirect:</string>
    <string name="radio_info_ppp_resets_label">Number of PPP reset since boot:</string>
    <string name="radio_info_gsm_disconnects_label">GSM disconnects:</string>
    <string name="radio_info_current_network_label">Current network:</string>
    <string name="radio_info_data_successes_label">Data successes:</string>
    <string name="radio_info_ppp_received_label">PPP received:</string>
    <string name="radio_info_gsm_service_label">GSM service:</string>
    <string name="radio_info_signal_strength_label">Signal strength:</string>
    <string name="radio_info_call_status_label">Call status:</string>
    <string name="radio_info_ppp_sent_label">PPP sent:</string>
    <string name="radio_info_radio_resets_label">Radio resets:</string>
    <string name="radio_info_message_waiting_label">Message waiting:</string>
    <string name="radio_info_phone_number_label">Phone number:</string>
    <string name="radio_info_band_mode_label">Select radio band</string>
    <string name="radio_info_network_type_label">Network type:</string>
    <string name="radio_info_set_perferred_label">Set preferred network type:</string>
    <string name="radio_info_ping_ipaddr">Ping IpAddr:</string>
    <string name="radio_info_ping_hostname">Ping Hostname(www.google.com):</string>
    <string name="radio_info_http_client_test">HTTP Client test:</string>
    <string name="ping_test_label">Run ping test</string>
    <string name="radio_info_smsc_label">SMSC:</string>
    <string name="radio_info_smsc_update_label">Update</string>
    <string name="radio_info_smsc_refresh_label">Refresh</string>
    <string name="radio_info_toggle_dns_check_label">Toggle DNS check</string>
    <string name="oem_radio_info_label">OEM-specific Info/Settings</string>
    <string name="band_mode_title">Set GSM/UMTS band</string>
    <string name="band_mode_loading">Loading band list...</string>
    <string name="band_mode_set">Set</string>
    <string name="band_mode_failed">Unsuccessful</string>
    <string name="band_mode_succeeded">Successful</string>
    <string name="sdcard_changes_instructions">Changes take effect when USB cable is reconnected</string>
    <string name="sdcard_settings_screen_mass_storage_text">Enable USB mass storage</string>
    <string name="sdcard_settings_total_bytes_label">Total bytes:</string>
    <string name="sdcard_settings_not_present_status">No SD card</string>
    <string name="airplane_mode">Flight mode</string>
    <string name="airplane_mode_summary">Disable all wireless connections</string>
    <string name="wifi_settings">Wi-Fi settings</string>
    <string name="wifi_settings_summary">Set up and manage WAPs</string>
    <string name="display_settings_title">Display</string>
    <string name="animations_title">Animation</string>
    <string name="accelerometer_title">Auto-rotate screen</string>
    <string name="accelerometer_summary_on">Switch orientation automatically when rotating phone</string>
    <string name="brightness">Brightness</string>
    <string name="brightness_summary">Adjust the brightness of the screen</string>
    <string name="screen_timeout">Screen timeout</string>
    <string name="screen_timeout_summary">Adjust the delay before the screen automatically turns off</string>
    <string name="tether_settings_title_usb">Tethering</string>
    <string name="tether_settings_summary_usb">"Share your phone's mobile data connection via USB"</string>
    <string name="network_settings_title">Mobile networks</string>
    <string name="network_settings_summary">Set options for roaming, networks, APNs</string>
    <string name="vpn_settings_title">VPN settings</string>
    <string name="vpn_settings_summary">Set up and manage Virtual Private Networks (VPNs)</string>
    <string name="usb_settings_list_item_title">USB settings</string>
    <string name="usb_settings_list_item_summary">Set USB connection</string>
    <string name="tvout_settings_title">TV out</string>
    <string name="tv_out_summary">TV-out settings</string>
    <string name="power_saving_mode">Power saving mode</string>
    <string name="power_saving_mode_summary">Save power by analyzing image and adjusting LCD brightness</string>
    <string name="update_notification">New application notification</string>
    <string name="off">Off</string>
    <string name="wifi_only">Wi-Fi only</string>
    <string name="packet_data">Packet data</string>
    <string name="wireless_synchronise_title">Synchronise</string>
    <string name="wireless_synchronise_summary">Synchronise data with servers and set sync profiles</string>
    <string name="g_sensor_title">Horizontal calibration</string>
    <string name="g_sensor_summary">Calibrate horizontally using accelerometer</string>
    <string name="mobileap_settings_summary">Enable other devices to connect Internet via 3G network of your phone</string>
    <string name="mobileap">Mobile AP</string>
    <string name="bluetooth_settings_title">Bluetooth settings</string>
    <string name="bluetooth_settings_summary">Manage connections, set device name, and visibility</string>
    <string name="bluetooth_ftp_server_sdcard_full1">Unable to save %1$s. Not enough memory on SD card</string>
    <string name="bluetooth_ftp_server_sdcard_full2">File: %1$s</string>
    <string name="bluetooth_ftp_server_sdcard_full3">Space needed: %1$s</string>
</resources>