<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:id="@id/settinglayout" android:scrollbars="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <com.nemustech.tiffany.widget.TFScrollView android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <LinearLayout android:orientation="vertical" android:id="@id/scrolllayout" android:scrollbars="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent">
            <TextView android:textSize="14.599976sp" android:textStyle="bold" android:textColor="@touchwiz:color/tw_color001" android:textColorHint="@touchwiz:color/tw_color002" android:gravity="center_vertical" android:id="@id/subTitle1" android:background="@android:drawable/dark_header" android:paddingLeft="6.0dip" android:layout_width="fill_parent" android:layout_height="25.299988dip" android:text="@string/update_notification" android:shadowColor="#ff000000" android:shadowDx="-1.0" android:shadowDy="-2.0" android:shadowRadius="1.0" />
            <com.sec.android.touchwiz.widget.TwRadioGroup android:orientation="vertical" android:id="@id/radio_group1" android:layout_width="fill_parent" android:layout_height="fill_parent"
              xmlns:touchwiz="http://schemas.android.com/apk/res/touchwiz">
                <com.sec.android.touchwiz.widget.TwRadioButton android:textAppearance="?android:textAppearanceLarge" android:gravity="center_vertical" android:id="@id/radio1" android:paddingLeft="6.0dip" android:paddingRight="6.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:checkMark="?android:listChoiceIndicatorSingle" android:text="@string/off" />
                <View android:background="@android:drawable/divider_horizontal_dark_opaque" android:layout_width="fill_parent" android:layout_height="1.0px" />
                <com.sec.android.touchwiz.widget.TwRadioButton android:textAppearance="?android:textAppearanceLarge" android:gravity="center_vertical" android:id="@id/radio2" android:paddingLeft="6.0dip" android:paddingRight="6.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:checkMark="?android:listChoiceIndicatorSingle" android:text="@string/wifi_only" />
                <View android:background="@android:drawable/divider_horizontal_dark_opaque" android:layout_width="fill_parent" android:layout_height="1.0px" />
                <com.sec.android.touchwiz.widget.TwRadioButton android:textAppearance="?android:textAppearanceLarge" android:gravity="center_vertical" android:id="@id/radio3" android:paddingLeft="6.0dip" android:paddingRight="6.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:checkMark="?android:listChoiceIndicatorSingle" android:text="@string/packet_data" />
                <View android:background="@android:drawable/divider_horizontal_dark_opaque" android:layout_width="fill_parent" android:layout_height="1.0px" />
            </com.sec.android.touchwiz.widget.TwRadioGroup>
        </LinearLayout>
    </com.nemustech.tiffany.widget.TFScrollView>
</LinearLayout>
